<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:baselineAligned="false">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                android:text="@string/prodid_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <TextView
                android:text="@string/not_assigned_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/productID" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                android:text="@string/prodname_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="Subject"
                android:ems="10"
                android:id="@+id/productName" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                android:text="@string/quantity_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/productQuantity" />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center"
        android:foregroundGravity="center_horizontal|center"
        android:layout_gravity="center">

        <Button
            android:text="@string/add_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:layout_weight="1"
            android:textAllCaps="false"
            tools:gravity="center"
            android:foregroundGravity="center"
            android:layout_gravity="center"
            android:onClick="newProduct" />

        <Button
            android:text="@string/find_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:onClick="lookupProduct" />

        <Button
            android:text="@string/delete_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:onClick="removeProduct" />
    </LinearLayout>

</LinearLayout>



